# remember-me

./: .gitignore  README.md  plan.md  start-ngrok.sh  tasks.md
11-lab/: App.js  App.web.js  NAME_BRIDGE_DOCS.md  app.json  name_bridge_api.sh  package-lock.json  package.json  python_agent_bridge.py  python_name_bridge.py  requirements-python.txt  run_name_bridge.sh  run_python_agent.sh
client/: app.json  package-lock.json  package.json
scripts/: dev-down.sh  dev-up.sh  seed-demo.sh  test.sh
server/: .env.example  .gitignore  README.md  api.md  face_demo.py  main.py  output.txt  pyproject.toml  requirements.txt
server/app/: __init__.py  api.py  auth_utils.py  config.py  gemini_service.py  main.py  models.py  schemas.py  store.py  supabase_client.py  titanet.py  tts_service.py
server/app/api/v1/: audio.py  auth.py  logs.py  memories.py  memory_agent.py  patient_mode.py  patients.py  people.py  recall.py  recognition.py  router.py
server/app/routers/: register.py
server/app/services/: __init__.py  gemini_service.py  pipeline.py
server/gemini/: requirements.txt
server/gemini/app/: config.py  main.py  models.py
server/gemini/app/routers/: recognize.py  sessions.py  stranger.py
server/gemini/app/services/: face_service.py  gemini_service.py  profile_store.py  session_store.py
server/gemini/app/utils/: image_utils.py
server/scripts/: seed_known_people.py
server/sql/: 20260301_storage_policies.sql
server/sql/migrations/: 20260301_add_gemini_fields.sql  20260301_disable_rls.sql  20260301_enable_pgvector.sql  20260301_remove_pin_add_memories.sql
(+31 files in other folders)
