[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.134.0",
    "google-genai>=1.65.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "supabase>=2.28.0",
]
