[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.35.0",
    "fastapi[standard]>=0.134.0",
    "google-genai>=1.65.0",
    "insightface>=0.7.3",
    "nemo_toolkit[asr]>=2.0.0",
    "numpy>=2.4.2",
    "onnxruntime>=1.19.0",
    "openai>=2.24.0",
    "opencv-python>=4.13.0.92",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "supabase>=2.28.0",
]
